Add ORM support with type-safe repository access and examples
- Introduced ORM components including `Entity`, `Document`, and `Repository` for type-safe CRUD operations.
- Updated `CMakeLists.txt` to include new ORM source files and examples.
- Added `orm_example.cpp` demonstrating the usage of the ORM with a `Player` entity.
- Enhanced `README.md` to document the new ORM features and provide usage examples.
- Implemented `Document` class for managing data serialization and deserialization.
- Updated `StorageComponent` to support ORM repository creation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,6 +87,7 @@ add_library(chwell_core
     src/storage/storage_factory.cpp
     src/storage/storage_component.cpp
     src/storage/storage_config_loader.cpp
+    src/storage/orm/document.cpp
 )
 
 target_include_directories(chwell_core
@@ -159,5 +160,10 @@ if (CHWELL_BUILD_EXAMPLES)
         examples/storage_example.cpp
     )
     target_link_libraries(example_storage PRIVATE chwell_core)
+
+    add_executable(example_orm
+        examples/orm_example.cpp
+    )
+    target_link_libraries(example_orm PRIVATE chwell_core)
 endif()
 
